--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+    <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/message-board.css">
 
@@ -19,6 +20,7 @@
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/message-board.js"></script>
+
 
     {{content-for "body-footer"}}
   </body>
